--- a/control-plane/csi-driver/Cargo.toml
+++ b/control-plane/csi-driver/Cargo.toml
@@ -54,6 +54,8 @@ udev = "0.6.2"
 url = "2.2.2"
 uuid = { version = "0.8.2", features = ["v4"] }
 which = "4.2.2"
+k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }
+kube = { version = "0.60.0", features = ["derive" ] }
 devinfo = { path = "../../utils/mayastor-dependencies/devinfo" }
 nvmeadm = { path = "../../utils/mayastor-dependencies/nvmeadm" }
 sysfs = { path = "../../utils/mayastor-dependencies/sysfs" }
