fix(csi): fixed helm charts for csi daemonset
Service account is added to CSI daemonset.

--- a/chart/templates/csi-node-daemonset.yaml
+++ b/chart/templates/csi-node-daemonset.yaml
@@ -19,6 +19,7 @@ spec:
       labels:
         app: mayastor-csi
     spec:
+      serviceAccount: mayastor-service-account
       hostNetwork: true
       nodeSelector:
         kubernetes.io/arch: amd64
