--- a/chart/templates/csi-node-daemonset.yaml
+++ b/chart/templates/csi-node-daemonset.yaml
@@ -28,7 +28,7 @@ spec:
       # the same.
       containers:
       - name: mayastor-csi
-        image: {{ .Values.mayastorCP.registry }}mayadata/mayastor-csi-node:{{ .Values.mayastorCP.tag }}
+        image: {{ .Values.mayastorCP.registry }}datacore/bolt-csi-node:{{ .Values.mayastorCP.tag }}
         imagePullPolicy: {{ .Values.mayastorCP.pullPolicy }}
         # we need privileged because we mount filesystems and use mknod
         securityContext:
