--- a/deploy/core-agents-deployment.yaml
+++ b/deploy/core-agents-deployment.yaml
@@ -36,7 +36,7 @@ spec:
             requests:
               cpu: 500m
               memory: 16Mi
-          image: mayadata/mayastor-core:develop
+          image: datacore/bolt-core:develop
           imagePullPolicy: Always
           args:
             - "-smayastor-etcd"
