--- a/deploy/rest-deployment.yaml
+++ b/deploy/rest-deployment.yaml
@@ -43,7 +43,7 @@ spec:
             requests:
               cpu: 50m
               memory: 32Mi
-          image: mayadata/mayastor-rest:develop
+          image: datacore/bolt-rest:develop
           imagePullPolicy: Always
           args:
             - "--dummy-certificates"
